# servant-routes

./: README.md  servant-routes.cabal
src/: Main.hs
static/: index.html
