name:                servant-routes
version:             0.1.0.0
synopsis:            Playing with Servant routes
description:         Please see README.md
homepage:            https://github.com/richchurcher/servant-routes#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Rich Churcher
maintainer:          rich.churcher@gmail.com
copyright:           2016
category:            test
build-type:          Simple
cabal-version:       >=1.10

executable servant-routes
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-types
                     , servant == 0.8.*
                     , servant-server
                     , transformers
                     , wai
                     , warp

